--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="FaviconIcon" href="C:\Users\Dell\Desktop\Portfolio\favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="C:\Users\Dell\Desktop\Portfolio\favicon.ico" type="image/x-icon">
-    <link rel=stylesheet href="C:\Users\Dell\Desktop\Portfolio\style.css">
+    <link rel="FaviconIcon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel=stylesheet href="style.css">
     <title>Sonali Bakshi's portfolio</title>
     <meta name="name" content="Sonali Bakshi's portal">
 </head>
@@ -15,7 +15,7 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="logo-image">
-          <img src="C:\Users\Dell\Desktop\Portfolio\favicon.ico" class="img-fluid">
+          <img src="favicon.ico" class="img-fluid">
         </div>
         <div class="brand">
           <a href="#hero">
@@ -53,7 +53,7 @@
         <div class="about container">
           <div class="col-left">
             <div class="about-img">
-              <img src="C:\Users\Dell\Desktop\Portfolio\12.jpg" alt="img">
+              <img src="12.jpg" alt="img">
             </div>
           </div>
           <div class="col-right">
@@ -63,7 +63,7 @@
                I am currently pursuing my BE-CSE from Chitkara University, Rajpura, Punjab with current cgpa of 8.52.I now many languages like C,C++,Java,HTML5,CSS,Javascript,Angular,Spring.
               As a programmer i have command in Java language . My strength is that i am mentally very strong and I take my own decision and donot get easily influenced by anyone.I have friendly nature with all peoples whether they are my known or unknown.
 
-            <p><a href="C:\Users\Dell\Desktop\Portfolio\SonaliResume.pdf" class="cta" download>Download Resume</a><a href="https://github.com/SonaliBakshi" class="cta" target="_blank">Visit Github</a><p>
+            <p><a href="SonaliResume.pdf" class="cta" download>Download Resume</a><a href="https://github.com/SonaliBakshi" class="cta" target="_blank">Visit Github</a><p>
           </div>
         </div>
       </section>
@@ -75,31 +75,31 @@
             <div><h1 class="title">Languages <span>Learned</span></h1></div>
             <div class="language-items">
               <div class="language-item">
-                <div class="icon"><img src="C:\Users\Dell\Desktop\Portfolio\c.jpg"/></div>
+                <div class="icon"><img src="c.jpg"/></div>
               </div>
               <div class="language-item">
-                <div class="icon"><img src="C:\Users\Dell\Desktop\Portfolio\c++.jpg"/></div>
+                <div class="icon"><img src="c++.jpg"/></div>
               </div>
               <div class="language-item">
-                <div class="icon"><img src="C:\Users\Dell\Desktop\Portfolio\java.jpg"/></div>
+                <div class="icon"><img src="java.jpg"/></div>
               </div>
               <div class="language-item">
-                <div class="icon"><img src="C:\Users\Dell\Desktop\Portfolio\10.jpg"></div>
+                <div class="icon"><img src="10.jpg"></div>
               </div>
               <div class="language-item">
-                <div class="icon"><img src="C:\Users\Dell\Desktop\Portfolio\web.jpg"/></div>
+                <div class="icon"><img src="web.jpg"/></div>
               </div>
           </div>
             <div><h1 class="title">My <span>Hobbies</span></h1></div>
             <div class="language-items">
               <div class="language-item">
-                <div class="icon"><img src="C:\Users\Dell\Desktop\Portfolio\3.jpg"/><span>Playing</span></div>
+                <div class="icon"><img src="3.jpg"/><span>Playing</span></div>
               </div>
               <div class="language-item">
-                <div class="icon"><img src="C:\Users\Dell\Desktop\Portfolio\2.jpg"/><span>Watching</span></div>
+                <div class="icon"><img src="2.jpg"/><span>Watching</span></div>
               </div>
               <div class="language-item">
-                <div class="icon"><img src="C:\Users\Dell\Desktop\Portfolio\draw.jpg"/><span>Drawing</span></div>
+                <div class="icon"><img src="draw.jpg"/><span>Drawing</span></div>
               </div>
             </div>
         </div>
@@ -124,7 +124,7 @@
                 <p><a class="cta" href="https://github.com/SonaliBakshi/HotelProject" target="_blank">Github Link</a></p>
               </div>
               <div class="project-img">
-                <img src="C:\Users\Dell\Desktop\Portfolio\4.jpg" alt="img">
+                <img src="4.jpg" alt="img">
               </div>
             </div>
             <div class="project-item">
@@ -135,7 +135,7 @@
                 <p><a class="cta" href="https://github.com/SonaliBakshi/SchoolManagementSystem" target="_blank">Github Link</a></p>
               </div>
               <div class="project-img">
-                <img src="C:\Users\Dell\Desktop\Portfolio\11.jpg" alt="img">
+                <img src="11.jpg" alt="img">
               </div>
             </div>
             <div class="project-item">
@@ -146,7 +146,7 @@
                 <p><a class="cta" href="https://github.com/SonaliBakshi/Make-Your-Own-Pizza" target="_blank">Github Link</a></p>
               </div>
               <div class="project-img">
-                <img src="C:\Users\Dell\Desktop\Portfolio\1.jpg" alt="img">
+                <img src="1.jpg" alt="img">
               </div>
             </div>
             <div class="project-item">
@@ -157,7 +157,7 @@
                 <p><a class="cta" href="https://github.com/SonaliBakshi/assessment-project" target="_blank">Github Link</a></p>
               </div>
               <div class="project-img">
-                <img src="C:\Users\Dell\Desktop\Portfolio\6.jpg" alt="img">
+                <img src="6.jpg" alt="img">
               </div>
             </div>
           </div>
@@ -171,14 +171,14 @@
           <div><h1 class="section-title">contact <span>info</span></h1></div>
           <div class="contact-items">
             <div class="contact-item">
-              <div class="icon"><img src="C:\Users\Dell\Desktop\Portfolio\7.jpg"/></div>
+              <div class="icon"><img src="7.jpg"/></div>
                 <div class="contact-info">
                   <h1>Email</h1>
                   <h2><a href=mailto:sonalibakshi108@gmail.com target="_blank">sonalibakshi108@gmail.com</a><h2>
                 </div>
             </div>
             <div class="contact-item">
-              <div class="icon"><img src="C:\Users\Dell\Desktop\Portfolio\8.jpg"/></div>
+              <div class="icon"><img src="8.jpg"/></div>
                 <div class="contact-info">
                   <h1>Adress</h1>
                   <h2>Chitkara University Rajpua , Punjab</h2>
